--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,5 +1,5 @@
 # == Schema Information
-# Schema version: 20110217000443
+# Schema version: 20110217003514
 #
 # Table name: users
 #
@@ -17,6 +17,7 @@
 #  last_sign_in_ip      :string(255)
 #  created_at           :datetime
 #  updated_at           :datetime
+#  username             :string(255)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
