--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,14 +1,14 @@
 # == Schema Information
-# Schema version: 20110213024120
+# Schema version: 20110217220809
 #
 # Table name: comments
 #
 #  id         :integer         not null, primary key
-#  commenter  :string(255)
 #  body       :text
 #  post_id    :integer
 #  created_at :datetime
 #  updated_at :datetime
+#  user_id    :integer
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
